# PulseArc

./: .gitignore  .npmrc  .prettierignore  .prettierrc  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  clippy.toml  deny.toml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
benchmarks/infra-baselines/: Cargo.toml
benchmarks/infra-baselines/benches/: baseline.rs  mac_ax.rs
benchmarks/infra-baselines/legacy-shim/: Cargo.toml
benchmarks/infra-baselines/legacy-shim/src/: db.rs  http.rs  lib.rs  mdm.rs
benchmarks/infra-baselines/src/: lib.rs
crates/api/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/api/capabilities/: default.json
crates/api/src/: lib.rs  main.rs
crates/api/src/adapters/: blocks.rs  database_stats.rs  mod.rs
crates/api/src/commands/: blocks.rs  calendar.rs  database.rs  feature_flags.rs  health.rs  idle.rs  idle_sync.rs  mod.rs  projects.rs  seed_snapshots.rs  suggestions.rs  tracking.rs  user_profile.rs  window.rs
crates/api/src/context/: mod.rs
crates/api/src/utils/: command_helpers.rs  health.rs  idle_sync_metrics.rs  logging.rs  mod.rs
crates/api/tests/: block_commands.rs  calendar_commands.rs  context_lifecycle.rs  database_commands.rs  idle_commands.rs  seed_commands.rs  support.rs  sync_commands_integration.rs  user_profile_commands.rs  window_commands.rs
crates/common/: Cargo.toml  README.md
crates/common/benches/: README.md  cache_bench.rs  collections_bench.rs  crypto_bench.rs  error_bench.rs  lifecycle_bench.rs  observability_bench.rs  privacy_bench.rs  resilience_bench.rs  security_bench.rs  storage_bench.rs  storage_stress_bench.rs  sync_bench.rs  time_bench.rs
crates/common/docs/: API_GUIDE.md
crates/common/src/: lib.rs
crates/common/src/auth/: README.md  client.rs  keychain.rs  mod.rs  pkce.rs  service.rs  token_manager.rs  traits.rs  types.rs
crates/common/src/cache/: README.md  async_core.rs  config.rs  core.rs  examples.rs  mod.rs  stats.rs  utils.rs
crates/common/src/collections/: README.md  bloom_filter.rs  bounded_queue.rs  lru.rs  lru_cache.rs  mod.rs  priority_queue.rs  ring_buffer.rs  trie.rs
crates/common/src/compliance/: README.md  audit.rs  config.rs  feature_flags.rs  mod.rs
crates/common/src/crypto/: README.md  encryption.rs  mod.rs
crates/common/src/error/: README.md  mod.rs
crates/common/src/lifecycle/: README.md  manager.rs  mod.rs  state.rs
crates/common/src/observability/: README.md  TRAIT_ABSTRACTIONS.md  mod.rs  traits.rs
crates/common/src/privacy/: README.md  mod.rs
crates/common/src/resilience/: README.md  adaptive.rs  bulkhead.rs  circuit_breaker.rs  histogram.rs  mod.rs  rate_limiter.rs  retry.rs
crates/common/src/security/: README.md  keychain.rs  mod.rs  rbac.rs  traits.rs
crates/common/src/storage/: README.md  config.rs  error.rs  metrics.rs  mod.rs  types.rs
crates/common/src/sync/: README.md  mod.rs
crates/common/src/testing/: README.md  assertions.rs  async_utils.rs  builders.rs  database.rs  fixtures.rs  matchers.rs  mocks.rs  mod.rs  temp.rs  time.rs
crates/common/src/time/: README.md  cron.rs  duration.rs  format.rs  interval.rs  mod.rs  timer.rs
crates/common/src/utils/: README.md  macros.rs  mod.rs  serde.rs
crates/common/src/validation/: README.md  mod.rs  rules.rs  validators.rs
crates/common/tests/: README.md  auth_integration.rs  cache_integration.rs  collections_integration.rs  compliance_integration.rs  cross_module_integration.rs  crypto_integration.rs  error_integration.rs  lifecycle_integration.rs  observability_integration.rs  privacy_integration.rs  resilience_integration.rs  security_integration.rs  storage_advanced_integration.rs  storage_integration.rs  sync_queue_integration.rs  sync_retry_integration.rs  testing_utilities_integration.rs  time_integration.rs  utils_integration.rs  validation_integration.rs  validation_rules_integration.rs
crates/common/tests/data/: mod.rs  sample_entities.rs
crates/common/tests/fixtures/: mock_encryption_keys.rs  mock_rbac_permissions.rs  mock_rbac_policies.rs  mock_rbac_users.rs  mod.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: classification_service.rs
crates/core/src/: calendar_ports.rs  command_metrics_ports.rs  database_stats_ports.rs  feature_flags_ports.rs  lib.rs  sap_ports.rs
crates/core/src/batch/: mod.rs  ports.rs
crates/core/src/classification/: block_builder.rs  evidence_extractor.rs  mod.rs  ports.rs  project_matcher.rs  service.rs  signal_extractor.rs
crates/core/src/sync/: mod.rs  ports.rs
crates/core/src/tracking/: mod.rs  ports.rs  service.rs
crates/core/src/user/: mod.rs  ports.rs
crates/core/src/utils/: mod.rs  patterns.rs
crates/core/tests/support/: calendar.rs  mod.rs  repositories.rs  wbs.rs
crates/domain/: Cargo.toml  README.md
crates/domain/src/: config.rs  constants.rs  errors.rs  lib.rs  macros.rs  types.rs
crates/domain/src/types/: classification.rs  database.rs  idle.rs  mod.rs  sap.rs  stats.rs  user.rs
crates/domain/src/utils/: calendar_parser.rs  mod.rs  pattern_extractor.rs  title.rs
crates/domain/tests/: classification_integration.rs
crates/infra/: Cargo.toml  README.md
crates/infra/examples/: mdm_remote_config.rs
crates/infra/src/: instance_lock.rs  key_manager.rs  lib.rs
crates/infra/src/api/: auth.rs  client.rs  commands.rs  errors.rs  forwarder.rs  mod.rs  scheduler.rs
crates/infra/src/config/: loader.rs  mod.rs
crates/infra/src/database/: activity_repository.rs  batch_repository.rs  block_repository.rs  calendar_event_repository.rs  command_metrics_repository.rs  database_stats_repository.rs  dlq_repository.rs  feature_flags_repository.rs  (+11 more)
crates/infra/tests/: config_loader_integration.rs  database_integration.rs  date_query_performance_regression.rs  outbox_retry_regression.rs  outbox_status_parsing_regression.rs  outbox_worker_network_integration.rs  sap_forwarder_date_regression.rs  support.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  errors.rs  lib.rs  types.rs
(+450 files in other folders)
