[workspace]
members = [
    "crates/shared",
    "crates/core",
    "crates/infra",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PulseArc Team"]
rust-version = "1.77"
publish = false
description = "PulseArc workspace baseline (enterprise defaults)"

[workspace.dependencies]
# Workspace-level shared dependencies
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1.0", features = ["v7", "v4", "serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Database
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl", "limits"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# Encryption & hashing
blake3 = "1.5"
hex = "0.4"
keyring = "2.3"
rand = "0.8"

# Image processing
image = "0.25"

# Environment & config
dotenvy = "0.15"
toml = "0.9"

# Utilities
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.1"

# OAuth & HTTP server
oauth2 = "5.0"
axum = "0.8"
tower = "0.5"
url = "2.5"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"

# Type generation
serde_with = "3"

# Internal crates
pulsearc-shared = { path = "crates/shared" }
pulsearc-core = { path = "crates/core" }
pulsearc-infra = { path = "crates/infra" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
overflow-checks = true
debug-assertions = false
incremental = false

[profile.dev]
panic = "unwind"
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true

[profile.bench]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true

[profile.dev.build-override]
opt-level = 0

[profile.release.build-override]
opt-level = 0
