[package]
name = "infra-baselines"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
legacy-shim = { path = "legacy-shim" }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
pulsearc-infra = { path = "../../crates/infra" }
serde_json = { workspace = true }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "baseline"
harness = false
