[package]
name = "pulsearc-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
# No default features - opt in to what you need
default = []

# Foundation tier - core utilities without side effects (no tracing, no anyhow)
foundation = [
    "dep:thiserror",
    "dep:serde",
    "dep:serde_json",
    "dep:toml",
    "dep:chrono",
    "dep:uuid",
    "dep:regex",
    "dep:rand",
    "dep:lru",
    "dep:hex",
    "dep:sha2",
    "dep:blake3",
    "dep:once_cell",
    "dep:url",
]

# Observability - explicit opt-in for tracing
observability = [
    "foundation",
    "dep:tracing",
]
runtime = [
    "foundation",
    "observability",  # Runtime modules use tracing for logging
    "dep:tokio",
    "dep:futures",
    "dep:async-trait",
    "dep:parking_lot",
    "dep:dashmap",
    "dep:moka",
    "dep:lazy_static",
    "dep:prometheus",
    "dep:base64",
    "dep:reqwest",
    "dep:flate2",
    "dep:aes-gcm",
    "dep:argon2",
]
platform = [
    "runtime",
    "dep:keyring",
    "dep:rusqlite",
    "dep:r2d2",
    "dep:r2d2_sqlite",
    "dep:oauth2",
    "dep:zeroize",
    "dep:urlencoding",
]
test-utils = [
    "runtime",
    "dep:tempfile",
    "dep:tokio-test",
]
serde = ["foundation"]

[dependencies]
# Workspace dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
lru = { version = "0.12", optional = true, default-features = false }
keyring = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
url = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tokio-test = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Additional dependencies
flate2 = { version = "1.0", optional = true, default-features = false, features = ["rust_backend"] }
lazy_static = { version = "1.4", optional = true, default-features = false }
prometheus = { version = "0.14", optional = true, default-features = false }
zeroize = { version = "1.7", features = ["derive"], optional = true, default-features = false }
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["aes", "alloc"] }
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc", "password-hash", "rand"] }
oauth2 = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }  # For test code only
wiremock = { workspace = true }

[[bench]]
name = "security_bench"
harness = false
required-features = ["platform"]

[[bench]]
name = "error_bench"
harness = false
required-features = ["foundation"]

[[bench]]
name = "privacy_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "resilience_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "crypto_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "collections_bench"
harness = false
required-features = ["foundation"]

[[bench]]
name = "cache_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "sync_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "lifecycle_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "time_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "observability_bench"
harness = false
required-features = ["runtime"]

[[bench]]
name = "storage_bench"
harness = false
required-features = ["platform"]

[[bench]]
name = "storage_stress_bench"
harness = false
required-features = ["platform"]

# Integration tests - specify required features
[[test]]
name = "auth_integration"
required-features = ["platform"]

[[test]]
name = "cache_integration"
required-features = ["runtime"]

[[test]]
name = "crypto_integration"
required-features = ["runtime"]

[[test]]
name = "collections_integration"
required-features = ["foundation"]

[[test]]
name = "error_integration"
required-features = ["foundation"]

[[test]]
name = "cross_module_integration"
required-features = ["platform"]

[[test]]
name = "lifecycle_integration"
required-features = ["runtime"]

[[test]]
name = "privacy_integration"
required-features = ["runtime"]

[[test]]
name = "resilience_integration"
required-features = ["runtime"]

[[test]]
name = "security_integration"
required-features = ["platform"]

[[test]]
name = "testing_utilities_integration"
required-features = ["runtime"]

[[test]]
name = "time_integration"
required-features = ["runtime"]

[[test]]
name = "validation_integration"
required-features = ["foundation"]

[[test]]
name = "validation_rules_integration"
required-features = ["foundation"]

[[test]]
name = "utils_integration"
required-features = ["foundation"]

[[test]]
name = "sync_queue_integration"
required-features = ["runtime"]

[[test]]
name = "sync_retry_integration"
required-features = ["runtime"]

[[test]]
name = "observability_integration"
required-features = ["runtime", "serde"]

[[test]]
name = "storage_integration"
required-features = ["platform"]

[[test]]
name = "storage_advanced_integration"
required-features = ["platform"]
