[package]
name = "pulsearc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Internal dependencies
pulsearc-common = { workspace = true, features = ["platform", "observability"] }
pulsearc-domain = { workspace = true }

# Workspace dependencies
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async support
async-trait = "0.1"

[features]
calendar = []
sap = []
ml = []
tree-classifier = []
