[package]
name = "pulsearc-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Internal dependencies
pulsearc-common = { workspace = true, features = ["platform", "observability"] }
pulsearc-domain = { workspace = true }
pulsearc-core = { workspace = true }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
regex = { workspace = true }

# Database
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# OAuth
oauth2 = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

# Keychain
keyring = { workspace = true }

# Cryptography
rand = { workspace = true }
hex = { workspace = true }

# Caching (Phase 3B: enrichment cache with TTL)
moka = { workspace = true }

# Scheduling (Phase 3D: cron-based schedulers)
tokio-cron-scheduler = { workspace = true }

# Process management (Phase 3B: AppleScript timeout handling)
wait-timeout = { workspace = true }

# TypeScript bindings (ts-gen feature)
ts-rs = { workspace = true, optional = true }

# macOS Platform APIs (optional, only on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
block2 = { workspace = true }
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.25"
io-kit-sys = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }  # Phase 3A.3: HTTP client testing
once_cell = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
calendar = ["pulsearc-core/calendar"]
sap = ["pulsearc-core/sap"]
openai = []
tree-classifier = []
ml = ["tree-classifier"]
graphql = []
audit-compliance = []
test-utils = []
ts-gen = ["ts-rs"]
