[package]
name = "pulsearc-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
