[package]
name = "legacy-shim"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
core-foundation = "0.10"
core-foundation-sys = "0.8"
wait-timeout = "0.2"
crossbeam-channel = "0.5"
